apps/lgtm-prometheus/base/lgtm-prometheus_IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`overwatch.thelemonsclan.com`) 
      services:
        - kind: Service
          name: kube-prometheus-stack-grafana
          passHostHeader: true
          port: 80
